# Desafio-1

./: Tetris.pro  main.cpp  tablero.cpp
.qtcreator/: Tetris.pro.user.c607a38  Tetris.pro.user.c68cfef
Tetris/: tablero.h
Tetris_def/: CMakeLists.txt  Random.cpp  Random.h  juego.cpp  juego.h  main.cpp  piezas.cpp  piezas.h  tablero.cpp  tablero.h
Tetris_def/Tetris_def/: Piezas.cpp
tablero/: CMakeLists.txt  main.cpp  tablero.cpp  tablero.h
untitled3/: CMakeLists.txt  pieza.h  piezas.cpp
